修改init回调逻辑

--- a/assets/widget/index.html
+++ b/assets/widget/index.html
@@ -42,33 +42,7 @@
         </script>
         <script type="text/javascript">
         var plugins = [
-            "uexFileMgr",
-            "uexXmlHttpMgr",
-            "uexUploaderMgr",
-            "uexDatabaseMgr",
-            "uexDownloaderMgr",
-            "uexDevice",
-            "uexSocketMgr",
-            "uexWeiXin",
-            "uexQQ",
-            "uexImage",
-            "uexAudio",
-            "uexButton",
-            "uexLocation",
-            "uexSina",
-            "uexChatKeyboard",
-            "uexCamera",
-            "uexIndexBar",
-            "uexVideo",
-            "uexControl",
-            "uexAliPay",
-            "uexScanner",
-            "uexActionSheet",
-            "uexBaiduMap",
-            "uexSecurityKeyboard",
-            "uexInputTextFieldView",
-            "uexBackground",
-            "uexGaodeNavi"
+            "uexBaiduNavi"
         ];
         var dom = $("#pluginList")
         plugins.forEach(function(aPlugin){
